@@ -8,6 +8,8 @@
 
 2010-08-19  Jason Rumney  <jasonr@gnu.org>
 
+	* w32menu.c (set_frame_menubar): Remove call to undefined function.
+
 	* w32fns.c (w32_wnd_proc): Don't check context before initializing.
 
 2010-08-19  Jan Djärv  <jan.h.d@swipnet.se>
